--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
+# Flask 核心
 flask>=3.0.0
 flask-cors>=4.0.0
 flask-sqlalchemy>=3.1.0
 flask-migrate>=4.0.0
 flask-jwt-extended>=4.6.0
+flasgger>=0.9.7.1
+werkzeug>=3.0.0
+
+# 数据库
 pymysql>=1.1.0
-python-dotenv>=1.0.0
-pydantic>=2.0.0
+sqlalchemy>=2.0.0
+
+# 数据验证
+pydantic[email]>=2.0.0
+marshmallow>=4.0.0
+
+# 安全
 cryptography>=42.0.0
+
+# 工具
+python-dotenv>=1.0.0
 requests>=2.32.0
+pyyaml>=6.0.0
+pillow>=10.0.0
+reportlab>=4.0.0
+
+# 测试
 pytest>=9.0.0
 pytest-cov>=5.0.0
-flasgger>=0.9.7.1
-
