--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,21 @@ JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
 # DATABASE_URL=sqlite:///sim_ai_paltform.db
 
 # MySQL (for production)
-DATABASE_URL=mysql+pymysql://user:password@localhost:3306/sim_ai_paltform
+# DATABASE_URL=mysql+pymysql://user:password@localhost:3306/sim_ai_paltform
 
 # PostgreSQL (alternative)
-# DATABASE_URL=postgresql://user:password@localhost:5432/sim_ai_paltform
+DATABASE_URL=postgresql://user:password@localhost:5432/sim_ai_paltform
 
 # CORS Configuration
 # Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+# Redis key prefix for this application
+REDIS_KEY_PREFIX=structsim:
+# Default cache TTL in seconds (1 hour)
+REDIS_DEFAULT_TTL=3600
